skychat/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skychat-api-deployment
  namespace: skychat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skychat-api-server
  template:
    metadata:
      labels:
        app: skychat-api-server
    spec:
      nodeSelector:
        master: "true"
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: skychat-api-pod
          image: docker.io/skyfortress/skychat:api-sha-b2ded64
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: skychat-api-server
  namespace: skychat
spec:
  selector:
    app: skychat-api-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
  loadBalancerIP: ${EXTERNAL_IP}
