skychat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skychat-ingress
  namespace: skychat
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-route53
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "skychat-api-server"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/connection-upgrade: "true"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: chat.skyfortress.dev
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: skychat-api-server
                port:
                  number: 80
          - path: /graphql/
            pathType: Prefix
            backend:
              service:
                name: skychat-api-server
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skychat-widget-server
                port:
                  number: 80
    - host: chat-plugin.skyfortress.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skychat-plugin-server
                port:
                  number: 80
  tls:
    - hosts:
        - chat.skyfortress.dev
        - chat-plugin.skyfortress.dev
      secretName: chat-letsencrypt-key
